# moxidle

./: Cargo.toml  README.md  flake.nix
.github/workflows/: deploy.yaml
completions/: _moxidle  moxidle.bash  moxidle.fish
contrib/systemd/: moxidle.service.in
doc/: moxidle.1.scd  moxidle.5.scd
nix/: home-manager.nix  package.nix
src/: audio.rs  config.rs  login.rs  main.rs  screensaver.rs  upower.rs  usb.rs
systemd/: moxidle.service
