[package]
name = "moxidle"
version = "0.1.0"
edition = "2021"

[dependencies]
calloop = { version = "0.14.2", features = [ "executor" ] }
calloop-wayland-source = "0.4.0"
env_logger = "0.11.6"
log = "0.4.25"
mlua = { version = "0.10.3", features = [ "lua54", "serialize" ] }
serde = { version = "1.0.217", features = [ "rc", "derive" ] }
wayland-client = "0.31.7"
wayland-protocols = { version = "0.32.5", features = [ "staging", "client" ] }
futures-lite = "2.6.0"
zbus = "5.3.1"
tokio = { version = "1.43.0", features = ["fs", "rt", "sync", "tokio-macros"] }
inotify = "0.11.0"
